--- a/readme.qmd
+++ b/readme.qmd
@@ -33,6 +33,9 @@ prop.columns = [col.lower() for col in prop.columns]
 
 ## Question 1: How have the prices of new housing units increased?
 
+Considering that prices have increased over time, I wanted to understand how the price of new housing units have evolved over the past ten years.  
+
+
 ```{python}
 #analyzing new houses
 prop1 = prop[prop['property_desc'] == 'New Dwelling house /Apartment'].reset_index(drop=True)
@@ -63,8 +66,10 @@ plt.ylabel('% Change')
 plt.show()
 ```
 
-## Question 2: Looking at Dublin, how have the prices overall (new and pre-existing units) increased?
+As we can see, new housing prices generally decresaed up until 2013, at which point the market might have overcorrected, increasing 25%.  After this jump, the year over year pricing has increased rather steadily. 
 
+## Question 2: Looking at Dublin, how have the prices overall (new and pre-existing units) increased?
+Within Dubin, I wanted to dive depeer into how overall prices have evolved; considering that Dublin is the capital, shocks to the market were likely felt most in Dublin.    
 ```{python}
 prop2 = prop.copy()
 prop2 = prop2[prop2['county'] == 'Dublin']
@@ -85,10 +90,12 @@ y1 = p2['Mean-Annual-Price']
 y1.plot()
 plt.title('Dublin Mean Property Prices 2010-2021')
 plt.xlabel('Year')
-plt.ylabel('Property Price')
+plt.ylabel('Property Price (in €)')
 plt.show()
 
 ```
+
+Similar to the year over year percentage change, the pricing of houses has increased steadily since 2015.  As we saw, the rate of change for new houses increased rapidly, with housing uint prices increasing by €50,000 per year
 
 ## Question 3: Are there any areas in Dublin that are driving this significant increase in price? 
 
@@ -122,7 +129,6 @@ Considering the results, we can see that Ballsbridge/Donnybrook (D4), Rathmines/
 
 ```{python}
 prop4 = prop.copy()
-#need to explode the desc column
 
 prop4_updated = prop4[prop4['property_size_desc'].notna()]
 
